--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "joi": "^13.7.0",
+    "mysql2": "^3.6.5"
   }
 }
