--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^13.7.0",
