--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^13.7.0",
-    "mysql2": "^3.6.5"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
+    "prisma": "^5.7.0",
+    "uuid": "^9.0.1"
   }
 }
