prisma practice & export in Nodejs

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -27,6 +27,7 @@
     "joi": "^13.7.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "python-shell": "^5.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
